crates/etas_tests/fixtures/compiler/projects/positive/content_calendar/src/app/calendar/publish.es
module app.calendar.publish;

import app.calendar.plan.{CalendarPlan};

public flow publish_plan(plan: CalendarPlan) -> string ![] {
    return "scheduled";
}
