crates/etas_tests/fixtures/compiler/projects/negative/duplicate_module/src/app/main/mod.es
module app.main;

flow helper() -> unit {
    return;
}
